[package]
name = "budgeters"
version = "0.1.0"
authors = ["Daniel Melody <dmwalter12@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
home = "0.5.3"
uuid = { version = "0.8", features = ["v4"] }
chrono = "0.4"
prettytable-rs = "^0.8"
